@@ -84,7 +84,7 @@ xmlns:maven="antlib:org.apache.maven.artifact.ant">
     <property name="test.timeout" value="900000" />
     <property name="test.junit.output.format" value="plain" />
     <property name="test.junit.fork.mode" value="perTest" />
-    <property name="test.junit.threads" value="8" />
+    <property name="test.junit.threads" value="1" />
     <property name="test.junit.printsummary" value="yes" />
     <property name="test.junit.haltonfailure" value="no" />
     <property name="config.dir" value="${src.dir}/java/test/config" />
